@@ -1,5 +1,9 @@
 2007-02-06  Scott James Remnant  <scott@netsplit.com>
 
+	* upstart/tests/test_message.c (test_new, test_handle)
+	(test_handle_using, test_reader): Update tests to include and
+	expect new type markers between each field.
+
 	* upstart/wire.c (upstart_push_int, upstart_push_unsigned):
 	Take out silly asserts; it must have room!
 
